[tool.poetry]
name = "daniel_coin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.4.0"
structlog = "^21.1.0"
colorama = "^0.4.4"
marshmallow = "^3.12.1"
marshmallow-oneofschema = "^2.1.0"
aiohttp = "^3.7.4"
more-itertools = "^8.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
